# sonivox

./: CMakeLists.txt  README.md
.github/workflows/: cmake-linux.yml  cmake-mac.yml  cmake-win.yml  cmake.yml
arm-wt-22k/host_src/: eas.cmake  eas_types.h
arm-wt-22k/lib_src/: eas_chorus.c  eas_chorusdata.h  eas_mdls.c  eas_mixer.c  eas_mixer.h  eas_reverb.c  eas_reverbdata.h  eas_voicemgt.c  wt_200k_G.c  wt_200k_samples.c  wt_22khz.c  wt_44khz.c
arm-wt-22k/src/: hostmm_ng.c
example/: CMakeLists.txt  sonivoxrender.1  sonivoxrender.1.md  sonivoxrender.c
fakes/utils/: Log.h
test/: SonivoxTest.cpp
